Added Social Media Buttons

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#serices" class="nav-link">
+                <a href="#services" class="nav-link">
                     Services
                 </a>
             </li>
@@ -311,13 +311,13 @@
                     Social connect
                 </h3>
                 <div class="media-cont">
-                    <a href="http://instagram.com/richfiststitches" target="_blank" rel="noopener noreferrer" title="connect on Instagram">
+                    <a href="https://instagram.com/richfiststitches" target="_blank" rel="noopener noreferrer" title="connect on Instagram">
                         <img src="images/instagram_icon.png" alt="" class="social">
                     </a>
-                    <a href="http://wa.me/09166079821" target="_blank" rel="noopener noreferrer" title="connect on whatsapp">
+                    <a href="https://wa.me/+2349166079821" target="_blank" rel="noopener noreferrer" title="connect on whatsapp">
                         <img src="images/whatsapp.jpeg" alt="" class="social">
                     </a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer" title="website">
+                    <a href="https://" target="_blank" rel="noopener noreferrer" title="website">
                         <img src="images/web (2).jpeg" alt="" class="social">
                     </a>
                 </div>
